// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <World /> should render correctly with Box by default 1`] = `
<Scene
  height={420}
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
  width={680}
>
  <r
    geometry={
      Object {
        "depth": 10,
        "height": 10,
        "width": 10,
      }
    }
    key="2"
    material={
      Object {
        "color": 15921906,
        "depthFunc": 3,
        "depthTest": true,
        "depthWrite": true,
        "emissive": 0,
        "metadata": Object {
          "generator": "Material.toJSON",
          "type": "Material",
          "version": 4.5,
        },
        "shininess": 30,
        "specular": 1118481,
        "type": "MeshPhongMaterial",
        "uuid": 0,
      }
    }
    position={
      Object {
        "y": 5,
      }
    }
  />
  <r
    geometry={
      Object {
        "height": 100,
        "width": 100,
      }
    }
    key="3"
    material={
      Object {
        "color": 4489099,
        "depthFunc": 3,
        "depthTest": true,
        "depthWrite": true,
        "emissive": 0,
        "metadata": Object {
          "generator": "Material.toJSON",
          "type": "Material",
          "version": 4.5,
        },
        "shininess": 30,
        "specular": 1118481,
        "type": "MeshPhongMaterial",
        "uuid": 0,
      }
    }
    rotation={
      Object {
        "x": -1.5707963267948966,
      }
    }
  />
  <r
    distance={100}
    intensity={0.5}
    key="4"
    position={
      Vector3 {
        "x": 0,
        "y": 10,
        "z": 10,
      }
    }
    shadow={
      Object {
        "fow": 90,
      }
    }
  />
  <r
    intensity={0.4}
    key="5"
  />
</Scene>
`;

exports[`component <World /> should render correctly with Sphere 1`] = `
<Scene
  height={420}
  style={
    Object {
      "height": "100%",
      "width": "100%",
    }
  }
  width={680}
>
  <r
    geometry={
      Object {
        "heightSegments": 32,
        "radius": 5,
        "widthSegments": 32,
      }
    }
    key="1"
    material={
      Object {
        "color": 15921906,
        "depthFunc": 3,
        "depthTest": true,
        "depthWrite": true,
        "emissive": 0,
        "metadata": Object {
          "generator": "Material.toJSON",
          "type": "Material",
          "version": 4.5,
        },
        "shininess": 30,
        "specular": 1118481,
        "type": "MeshPhongMaterial",
        "uuid": 0,
      }
    }
    position={
      Object {
        "y": 5,
      }
    }
  />
  <r
    geometry={
      Object {
        "height": 100,
        "width": 100,
      }
    }
    key="3"
    material={
      Object {
        "color": 4489099,
        "depthFunc": 3,
        "depthTest": true,
        "depthWrite": true,
        "emissive": 0,
        "metadata": Object {
          "generator": "Material.toJSON",
          "type": "Material",
          "version": 4.5,
        },
        "shininess": 30,
        "specular": 1118481,
        "type": "MeshPhongMaterial",
        "uuid": 0,
      }
    }
    rotation={
      Object {
        "x": -1.5707963267948966,
      }
    }
  />
  <r
    distance={100}
    intensity={0.5}
    key="4"
    position={
      Vector3 {
        "x": 0,
        "y": 10,
        "z": 10,
      }
    }
    shadow={
      Object {
        "fow": 90,
      }
    }
  />
  <r
    intensity={0.4}
    key="5"
  />
</Scene>
`;
